// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SQL Factory Test Suite should support build a SELECT FOR SHARE LOCK query 1`] = `
{
  "sql": "SELECT * FROM test_int_People WHERE Name = ? LOCK IN SHARE MODE",
  "values": [
    "Theo",
  ],
}
`;

exports[`SQL Factory Test Suite should support build a SELECT FOR UPDATE query 1`] = `
{
  "sql": "SELECT * FROM test_int_People WHERE Name = ? FOR UPDATE",
  "values": [
    "Theo",
  ],
}
`;

exports[`SQL Factory Test Suite should support build a complex SELECT projection 1`] = `
{
  "sql": "SELECT Name, Age, RegisterDate FROM test_int_People WHERE Name = ? AND Age <= 15 AND RegisterDate BETWEEN ? AND ?",
  "values": [
    "Theo",
    "2022-11-17",
    "2022-11-17",
  ],
}
`;

exports[`SQL Factory Test Suite should support build a simple SELECT query 1`] = `"SELECT * FROM test_int_People"`;

exports[`SQL Factory Test Suite should support insert columns 1`] = `
{
  "sql": "INSERT INTO test_int_People ( ID, Name, Age, RegisterDate , createdAt, createdBy, modifiedAt, modifiedBy ) VALUES ?",
  "values": [
    "c83b5945-f7c2-48f0-ad6f-0e9b048ab2e3",
    "Theo",
    15,
    "2022-11-17",
    "2022-11-22T14:54:59.340Z",
    "ANONYMOUS",
    "2022-11-22T14:54:59.340Z",
    "ANONYMOUS",
  ],
}
`;

exports[`SQL Factory Test Suite should support insert with select query 1`] = `
{
  "sql": "INSERT INTO b SELECT * FROM a",
  "values": [],
}
`;

exports[`SQL Factory Test Suite should support insert with select query: with columns 1`] = `
{
  "sql": "INSERT INTO b ( c1, c2 ) SELECT c1, c2 FROM a WHERE b = 1",
  "values": [],
}
`;

exports[`SQL Factory Test Suite should support insert with select query: with condition 1`] = `
{
  "sql": "INSERT INTO b SELECT * FROM a WHERE b = 1",
  "values": [],
}
`;

exports[`SQL Factory Test Suite should support select for update: for update lock 1`] = `
{
  "sql": "SELECT * FROM A WHERE b = 1 FOR UPDATE",
  "values": [],
}
`;

exports[`SQL Factory Test Suite should support select for update: for update lock not supported 1`] = `
{
  "sql": "SELECT * FROM A WHERE c = 2 FOR UPDATE",
  "values": [],
}
`;

exports[`SQL Factory Test Suite should support select for update: share lock 1`] = `
{
  "sql": "SELECT * FROM A WHERE a = 1 LOCK IN SHARE MODE",
  "values": [],
}
`;

exports[`SQL Factory Test Suite should support select with join 1`] = `
{
  "sql": "SELECT * FROM a INNER JOIN b ON a.a = b.a",
  "values": [],
}
`;
